--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -19,13 +19,12 @@
     <body>
 	<!--- Navbar element for the search bar and the next search -->
 	<div class='searchbox'>
-		<input id='srchbox' style='width:20%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search within this book..."><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i>
+		<input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search this book"><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i>
 		<span id="bibliography" class="bibliostyle"></span></input>
 
 		<div style='position: relative;width: 30%;'>
 		    <div id='fuzzysuggestions' style='visibility:hidden;z-index: 5;position: absolute;top:0;left: 1rem;background:white;border: 2px solid black;width: 55vw;'></div>
 		</div>
-	    <hr/>
 	</div>
 
 	<div class='topnav'>
